# mousemode

./: .gitignore  .travis.yml  .vimrc  Design.md  Makefile.am  README.md  config.yml  configure.ac  mousemode.service
src/: config.c  config.h  keyboard.c  keyboard.h  main.c  mouse.c  mouse.h
tests/lint/: astyle.sh  line-length.sh
